# ChessCode

./: .gitignore  Board.cpp  Board.h  Bot.cpp  Bot.h  CMakeLists.txt  LogFile.cpp  LogFile.h  LogInFile.cpp  LogInFile.h  MM.cpp  MM.h  MainChessGame.cpp  MainChessGame.h  Piece.cpp  Piece.h  Player.cpp  Player.h  PlayerHuman.cpp  PlayerHuman.h  README.md  Type.h  Zobrist.cpp  Zobrist.h  main.cpp
OpeningBook/: OpeningBook.cpp  OpeningBook.h  ReadOpeningBook.cpp  ReadOpeningBook.h
Test/: Test.cpp  Test.h  TestBoard.cpp  TestBoard.h  TestBot.cpp  TestBotAI.cpp  TestBotAI.h  TestOpeningBook.cpp  TestOpeningBook.h  TestPerf.cpp  TestPerf.h  TestPiece.cpp  TestPlayer.cpp  TestUCI.cpp  TestZobrist.cpp  TestZobrist.h
UCI/: UCI.cpp  UCI.h
